--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "fast-csv": "^2.4.1",
+    "grafana-datasource-kit": "^0.0.3",
     "moment": "^2.22.1",
     "nodemon": "^1.17.3",
     "ts-loader": "^3.5.0",
