--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "export-manager-server",
+  "name": "grafana-data-exporter",
   "version": "0.3.1",
   "description": "Server for fetching data from Grafana datasources",
   "scripts": {
