--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "fast-csv": "^2.4.1",
-    "grafana-datasource-kit": "^0.0.8",
+    "grafana-datasource-kit": ">=0.0.9",
     "moment": "^2.22.1",
     "nodemon": "^1.17.3",
     "ts-loader": "^3.5.0",
