--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "author": "CorpGlory",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@corpglory/tsdb-kit": "^1.0.0"
+  },
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.116",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "fast-csv": "^2.4.1",
-    "grafana-datasource-kit": "0.1.17",
     "moment": "^2.22.1",
     "nodemon": "^1.17.3",
     "ts-loader": "^3.5.0",
