--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "author": "CorpGlory",
   "license": "ISC",
-  "dependencies": {
-    "@corpglory/tsdb-kit": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.116",
+    "@corpglory/tsdb-kit": "^1.0.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "fast-csv": "^2.4.1",
